2002-06-08  Max Horn  <max@quendi.de>

	* Bootstrap.pm (bootstrap): Added apt-shlibs to the list of packages that are
	automatically installed during bootstrap.
	
	* Engine.pm (cmd_scanpackages): Made apt-shlibs an "important" package.

	* Package.pm: Implemented use_cache flag - can later be used to add an
	option to turn off the package cacher temporarily.
	
	* SelfUpdate.pm (finish): Include apt-shlibs in the list of packags that are
	updated upon a selfupdate.

2002-05-28  Max Horn  <max@quendi.de>

	* Services.pm (file_MD5_checksum): Fixed bug caused by certain special
	characters occuring in filenames passed to this function.

2002-05-28  Max Horn  <max@quendi.de>

	* PkgVersion.pm (phase_patch, phase_compile, phase_install): Now use the new
	run_script method; single-shell scripts are now actually usable inside
	InstallScript and PatchScript.

	* PkgVersion.pm: New method run_script that encapsulates running a script.

2002-05-27  Max Horn  <max@quendi.de>

	* Validation.pm: Accept Source-MD5/SourceN-MD5 as legal fields.

2002-05-26  Max Horn  <max@quendi.de>

	* Engine.pm (do_real_list): Fixed bug that occured when output of 'fink list'
	was not going to a terminal and --width=auto was specified.

2002-05-25  Max Horn  <max@quendi.de>

	* PkgVersion.pm: Added Source-MD5/SourceN-MD5 fields.

	* Services.pm: Added file_MD5_checksum function.

	* PkgVersion.pm: Make use of the new execute_script function.

	* Services.pm: Added execute_script function (based on patch #534121 by
	Benjamin Reed).

2002-05-25  Alexander Strange <MrVacBob@mac.com>

	* SelfUpdate.pm (setup_direct_cvs): The hardlink-support test works now.

2002-05-23  Max Horn  <max@quendi.de>

	* Engine.pm (real_install): Under certain condition, splitoffs could have 
	been activated more than once. This problem fixes this.

2002-05-16  Max Horn  <max@quendi.de>

	* Engine.pm (real_install): Fixed 'fink rebuild' to honor BuildDepends.

2002-05-16  Max Horn  <max@quendi.de>
